# zohar-token

./: Anchor.toml  Cargo.toml
nft-pipeline/: .env.template  .gitignore  animate_master.py  darken_roof.py  make_placeholder_base.py  metadata.json  parasha_map.py  phase10_ner_composite.py  phase1_extract.py  phase2_temple.py  phase3_tiles.py  phase4_composite.py  phase5_zoom.py  phase6_metadata.py  phase8b_all.py  phase8b_typeset.py  phase9_ner_map.py  requirements.txt
nft-pipeline/parasha_words/: acharei_mot.json  balak.json  bamidbar.json  bechukotai.json  behaalotecha.json  behar.json  beresheet.json  beshalach.json  bo.json  chayei_sarah.json  chukat.json  ekev.json  emor.json  haazinu.json  idra_rabba.json  idra_zuta.json  kedoshim.json  ki_tavo.json  ki_tetze.json  ki_tisa.json  korach.json  lech_lecha.json  matot.json  metzora.json  miketz.json  mishpatim.json  naso.json  nitzavim.json  noach.json  pekudei.json  pinchas.json  reeh.json  shelach_lecha.json  shemini.json  shemot.json  shoftim.json  sifra_ditzniuta.json  tazria.json  terumah.json  tetzaveh.json  (+13 more)
programs/zohar-token/: Cargo.toml
programs/zohar-token/src/: constants.rs  error.rs  lib.rs  state.rs
programs/zohar-token/src/instructions/: initialize.rs  mint_zohar.rs  mod.rs  verify_ownership.rs
programs/zohar-token/tests/: test_initialize.rs
